--- a/front-end/mall4m/pages/orders/pages/order-detail/order-detail.wxml
+++ b/front-end/mall4m/pages/orders/pages/order-detail/order-detail.wxml
@@ -20,7 +20,7 @@
           <text class="order-sts  gray">{{status}}</text>
         </view>
       </view> -->
-      <block wx:for="{{orderItemDtos}}"  wx:for-index="index" wx:key='index'>
+      <block wx:for="{{orderItemDtos}}"  wx:for-index="index" wx:key='id'>
         <view class='item-cont' bindtap='toProdPage' data-prodid="{{item.prodId}}">
           <view class='prod-pic'>
             <image src='{{item.pic}}'></image>
@@ -30,8 +30,8 @@
               {{item.prodName}}
             </view>
             <view class='prod-info-cont'>
-              <text class='number'>数量：{{item.prodCount}}</text>
-              <text class='info-item'>{{item.skuName}}</text>
+              <text class='number'>{{item.skuName}}</text>
+              <text class='info-item'>X{{item.prodCount}}</text>
             </view>
             <view class='price-nums clearfix'>
               <text class='prodprice'><text class='symbol'>￥</text>
@@ -39,42 +39,20 @@
               <text class='small-num'>.{{wxs.parsePrice(item.price)[1]}}</text></text>
               <view class='btn-box'>
                 <text class='btn' wx:if="{{item.status!=1}}">申请售后</text>
-                <text class='btn' data-index='{{index}}' catchtap='addToCart'>加购物车</text>
+                <!-- <text class='btn' data-index='{{index}}' catchtap='addToCart'>加购物车</text> -->
               </view>
             </view>
           </view>
         </view>
       </block>
-      <!-- <view class='item-cont' bindtap='toOrderDetailPage' data-ordernum="{{item.primaryOrderNo}}">
-        <view class='prod-pic'>
-          <image src='../../images/prod/pic10.jpg'></image>
-        </view>
-        <view class='prod-info'>
-          <view class='prodname'>
-            THE BEAST/野兽派 雪花发财狗
-          </view>
-          <view class='prod-info-cont'>
-            <text class='number'>数量：1</text>
-            <text class='info-item'>发财狗</text>
-          </view>
-          <view class='price-nums clearfix'>
-            <text class='prodprice'><text class='symbol'>￥</text>
-            <text class='big-num'>{{wxs.parsePrice(40.00)[0]}}</text>
-            <text class='small-num'>.{{wxs.parsePrice(40.00)[1]}}</text></text>
-            <view class='btn-box'>
-              <text class='btn'>申请售后</text>
-              <text class='btn'>加购物车</text>
-            </view>
-          </view>
-        </view>
-      </view> -->
+
       <view class='prod-foot'>
         <view class='btn'>
-          <button wx:if="{{item.status==1}}" class="button" bindtap="onCancelOrder" data-ordernum="{{item.primaryOrderNo}}" hover-class='none'>取消订单</button>
-          <button wx:if="{{item.status==1}}" class="button warn" bindtap="onConfirmReceive" data-ordernum="{{item.primaryOrderNo}}" hover-class='none'>再次购买</button>
-          <button wx:if="{{item.status==1}}" class="button warn" bindtap="onPayAgain" data-ordernum="{{item.primaryOrderNo}}" hover-class='none'>付款</button>
-          <button wx:if="{{item.status==3 || item.status==5}}" class="button" bindtap="toDeliveryPage" data-ordernum="{{item.primaryOrderNo}}" hover-class='none'>查看物流</button>
-          <button wx:if="{{item.status==3}}" class="button warn" bindtap="onConfirmReceive" data-ordernum="{{item.primaryOrderNo}}" hover-class='none'>确认收货</button>
+          <button wx:if="{{order.status==1}}" class="button" bindtap="onCancelOrder" data-ordernum="{{order.primaryOrderNo}}" hover-class='none'>取消订单</button>
+          <button wx:if="{{order.status==1}}" class="button warn" bindtap="onConfirmReceive" data-ordernum="{{order.primaryOrderNo}}" hover-class='none'>再次购买</button>
+          <button wx:if="{{order.status==1}}" class="button warn" bindtap="onPayAgain" data-ordernum="{{order.primaryOrderNo}}" hover-class='none'>付款</button>
+          <button wx:if="{{order.status==3 || order.status==5}}" class="button" bindtap="toDeliveryPage" data-ordernum="{{order.primaryOrderNo}}" hover-class='none'>查看物流</button>
+          <button wx:if="{{order.status==3}}" class="button warn" bindtap="onConfirmReceive" data-ordernum="{{order.primaryOrderNo}}" hover-class='none'>确认收货</button>
         </view>
       </view>
     </view>
@@ -91,23 +69,41 @@
           <text class='item-tit'>下单时间：</text>
           <text class='item-txt'>{{createTime}}</text>
         </view>
-      </view>
-      <view class='msg-item'>
-        <view class='item'>
-          <text class='item-tit'>支付方式：</text>
-          <text class='item-txt'>微信支付</text>
-        </view>
-        <view class='item'>
-          <text class='item-tit'>配送方式：</text>
-          <text class='item-txt'>普通配送</text>
-        </view>
         <view class='item'>
           <text class='item-tit'>订单备注：</text>
           <text class='item-txt'>{{remarks}}</text>
         </view>
       </view>
-    </view>
+      <view class='msg-item' wx:if="{{order.isPayed == 1}}">
+        <view class='item'>
+          <text class='item-tit'>付款时间：</text>
+          <text class='item-txt'>{{order.payTime}}</text>
+        </view>
+        <view class='item'>
+          <text class='item-tit'>支付方式：</text>
+          <text class='item-txt'>{{dict.getPayTypeName(order.payType)}}</text>
+        </view>
+        <view class='item'>
+          <text class='item-tit'>发货状态：</text>
+          <text class='item-txt'>{{order.dvyFlowId != '' ? '已发货': '未发货'}}</text>
+        </view>
+      </view>
 
+      <view class='msg-item' wx:if="{{order.dvyFlowId != ''}}">
+        <view class='item'>
+          <text class='item-tit'>发货时间：</text>
+          <text class='item-txt'>{{order.dvyTime}}</text>
+        </view>
+        <view class='item'>
+          <text class='item-tit'>物流服务：</text>
+          <text class='item-txt'>{{order.dvyId}}</text>
+        </view>
+        <view class='item'>
+          <text class='item-tit'>运单号码：</text>
+          <text class='item-txt'>{{order.dvyFlowId}}</text>
+        </view>
+    </view>
+    </view>
     <view class='order-msg'>
       <view class='msg-item'>
         <view class='item'>
@@ -157,3 +153,4 @@
   </view>
 </view>
 <wxs module="wxs" src="../../../../wxs/number.wxs" />
+<wxs module="dict" src="../../../../wxs/dict.wxs" />
